force-app/main/default/objects/CapIQ_Company__c/CapIQ_Company__c.object-meta.xml
<CustomObject>
    <label>CapIQ Company</label>
    <nameField>
        <label>CapIQ Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CapIQ Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>