force-app/main/default/objects/CapIQ_Company__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>