force-app/main/default/objects/CapIQ_Company__c/fields/CompanyStatus__c.field-meta.xml
<CustomField>
    <fullName>CompanyStatus__c</fullName>
    <description>Company Status</description>
    <label>CompanyStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>