force-app/main/default/objects/CapIQ_Company__c/fields/Equity_Investment_From__c.field-meta.xml
<CustomField>
    <fullName>Equity_Investment_From__c</fullName>
    <description>Equity Investment From (Equity Check)</description>
    <label>Equity Investment From (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>