force-app/main/default/objects/CapIQ_Company__c/fields/HL_Sector__c.field-meta.xml
<CustomField>
    <fullName>HL_Sector__c</fullName>
    <label>HL Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HL_Industry_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Academic Research &amp; IP</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Airlines/Air Cargo</fullName>
            </value>
            <value>
                <fullName>Ambulatory Surgical Centers</fullName>
            </value>
            <value>
                <fullName>Analytics &amp; Big Data</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Autonomous Systems</fullName>
            </value>
            <value>
                <fullName>Behavioral &amp; Labs</fullName>
            </value>
            <value>
                <fullName>Broker Dealers</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Business Management Software</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>CBD/Cannabis</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Commercial Financial Co.</fullName>
            </value>
            <value>
                <fullName>Communications &amp; Infrastructure Components</fullName>
            </value>
            <value>
                <fullName>Communications Solutions</fullName>
            </value>
            <value>
                <fullName>Company &amp; Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Consumer/Non-Mortgate Finance Co.</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Customer Information Management</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Data Centers</fullName>
            </value>
            <value>
                <fullName>Dealership &amp; Rental Services</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>