force-app/main/default/objects/CapIQ_Company__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>