force-app/main/default/objects/CapIQ_Company__c/fields/Industry_Group_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_REPORTING__c</fullName>
    <formula>IF(FIND( &quot; - &quot;,TEXT(HL_Industry_Group__c) ) &gt; 0, LEFT(TEXT(HL_Industry_Group__c), FIND( &quot; - &quot;,TEXT(HL_Industry_Group__c) ) - 1), TEXT(HL_Industry_Group__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Group (REPORTING)</label>
    <type>Text</type>
</CustomField>