force-app/main/default/objects/CapIQ_Company__c/fields/Industry_Umbrella_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella_REPORTING__c</fullName>
    <formula>IF(
NOT(ISBLANK(Industry_Umbrella__c)), 
&apos;BUS&apos;,  
 Industry_Group_REPORTING__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Umbrella (REPORTING)</label>
    <type>Text</type>
</CustomField>