force-app/main/default/objects/CapIQ_Company__c/fields/Parent_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sponsor__c</fullName>
    <description>The sponsor of the fund or the parent company of the company</description>
    <inlineHelpText>The sponsor of the fund or the parent company of the company</inlineHelpText>
    <label>Parent Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>