force-app/main/default/objects/CapIQ_Company__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>