force-app/main/default/objects/CapIQ_Company__c/fields/StreetAddress3__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress3__c</fullName>
    <label>StreetAddress3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>