force-app/main/default/objects/CapIQ_Company__c/fields/StreetAddress4__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress4__c</fullName>
    <label>StreetAddress4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>