force-app/main/default/objects/CapIQ_Company__c/fields/StreetAddress_2__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress_2__c</fullName>
    <label>StreetAddress2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>