force-app/main/default/objects/CapIQ_Company__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <externalId>true</externalId>
    <label>Ticker Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>