force-app/main/default/objects/CapIQ_Company__c/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <label>Year Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>