force-app/main/default/objects/CapIQ_Company__c/validationRules/Lock_CapIQ_Company_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_CapIQ_Company_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp;  $User.ProfileId != &apos;00ei00000016T4B&apos; &amp;&amp; $User.ProfileId != &apos;00ei0000001dqaQ&apos;</errorConditionFormula>
    <errorMessage>Please contact Salesforce Support to change CapIQ Company name.</errorMessage>
</ValidationRule>