force-app/main/default/objects/CapIQ_Company__c/listViews/All_CapIQ_Companies.listView-meta.xml
<ListView>
    <fullName>All_CapIQ_Companies</fullName>
    <columns>NAME</columns>
    <columns>Company_ID__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>CompanyType__c</columns>
    <columns>CompanyStatus__c</columns>
    <columns>Exchange__c</columns>
    <columns>Exchange_Symbol__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CapIQ Companies</label>
</ListView>